# nixcfg

./: .editorconfig  .envrc  .gitignore  .oxfmtrc.json  .oxlintrc.json  .pinact.yaml  .root  .sops.yaml  .venv  .yamlfmt  .yamllint  AGENTS.md  AUDIT.md  CI_FAILURE_ANALYSIS.md  LICENSE  README.md  apps.nix  biome.jsonc  bootstrap.sh  commitlint.config.ts  cosmic-ray.toml  default.nix  deploy.sh  flake.nix  lib.nix  nixcfg.py  overlays.nix  project.py  pyproject.toml  renovate.json  schema_codegen.yaml  secrets.yaml  sources.json  starship.toml  statix.toml  update.py  vscode.lock.json
.beads/: PRIME.md  README.md  issues.jsonl  sync_base.jsonl
.claude/: settings.local.json
.dex/: tasks.jsonl
.github/aw/: actions-lock.json
.github/scripts/: build_shared_closure.py  flake_lock_diff.py  free_disk_space.sh  merge_sources.py
.github/workflows/: ci.yml  update-certify.yml  update-self-heal-pr.yml  update-self-heal.lock.yml  update-self-heal.md  update.yml
.opencode/commands/: add-package.md  input-tag-update.md
.zed/: settings.json
artifacts/: ci-sharding-profile.json
config/: npmrc  tmux.conf
config/git/: personal  plaid
config/nvim/: init.lua
config/sheldon/: plugins.toml
darwin/: argus.nix  rocinante.nix
device/: lenovo-thinkpad-x1-carbon-gen12.nix
device/home/: apple-macbook-pro-m1-16in.nix  lenovo-thinkpad-x1-carbon-gen10.nix
device/system/: lenovo-thinkpad-x1-carbon-gen10.nix
docs/: packaging-source-modifications.md
ghawfr/: README.md  go.mod  go.sum
ghawfr/actionadapter/: doc.go  helpers.go  helpers_test.go  local.go  registry.go  registry_test.go  remote.go  setup_tools.go  setup_tools_test.go  toolcache.go
ghawfr/artifacts/: doc.go  store.go  store_test.go
ghawfr/backend/: auto.go  auto_test.go  backend.go  conformance_test.go  doc.go  host.go  host_test.go  jobexec.go  local.go  local_test.go  materialize.go  materialize_test.go  materialized.go  plan.go  plan_test.go  provider.go  provider_test.go  remote_exec.go  remote_exec_test.go  requirements.go  requirements_test.go  runner_context.go  toolcache.go  validate.go  validate_test.go
ghawfr/cache/: doc.go  store.go  store_test.go
ghawfr/controller/: doc.go  replan.go  replan_test.go  run.go  run_provider_test.go  run_test.go
ghawfr/planner/: doc.go  plan.go  plan_test.go
ghawfr/state/: doc.go  paths.go  run.go  run_test.go
ghawfr/workerproto/: client.go  client_server_test.go  doc.go  protocol.go  server.go
ghawfr/workflow/: data.go  doc.go  eval.go  eval_test.go  expand.go  options.go  parse.go  parse_test.go  types.go
home/: _base.nix  george.nix  jesse.nix  standalone-home.nix
home/george/: bun.nix  configuration.nix  darwin.nix  default.nix  git.nix  go.nix  meta.nix  nixvim.nix  nvim-keymaps.nix  opencode.nix  packages.nix  ptpython.py  python.nix  rust.nix  standalone-home.nix  stylix.nix  zed.nix  zen-folders.yaml  zsh.nix
lib/: __init__.py  asar_integrity.py  cargo_nix_normalizer.py  cargo_nix_normalizer_cli.py  check_python_compile.py  cli.py  codegen_utils.py  codemods-pythonpath.nix  compat-overlay.nix  config.py  crate2nix-tauri.nix  crate2nix_tauri_env_rewrite.py  crate2nix_tauri_patch_acl_build.py  default.nix  dev-shell.nix  discovery.nix  events.py  exceptions.py  exports.nix  fix_python_multi_except.py  format_text.py  go-cli-package.nix  go_cli_package.nix  http.py  http_utils.py  import_utils.py  json_utils.py  lib.nix  lint-files.nix  mac-apps.nix  mac_apps_helper.py  mcp-remote-wrapper.nix  mksystem.nix  models.py  nix.py  opencode-mcp.nix  package-materialization.nix  package-self-source.nix  renderer.py  rusty-v8.nix  (+1 more)
lib/base/: home.nix  nixos.nix
lib/codemods/: __init__.py  errors.py  json_files.py  packaging_source_policy.py  text.py  tree_sitter.py
lib/github_actions/: __init__.py  cli.py  client.py  tail.py  web_auth.py
lib/nix/: __init__.py
lib/recover/: __init__.py  _cli.py  _common.py  cli.py  files.py  hashes.py  snapshot.py
lib/rusty-v8/: __init__.py  patch_allocator_build.py  patch_apple_toolchain_host_build_tools.py  patch_build_rs_prebuilt.py  patch_compiler_gni.py  patch_stdlib_adler.py  patch_whole_archive.py  rusty-v8-nix.patch
lib/schema_codegen/: __init__.py  _prepare.py  _render.py  config.py  lockfile.py  runner.py
lib/tests/: __init__.py  _aiohttp.py  _assertions.py  _nix_ast.py  _nix_eval.py  _nix_source.py  _package_registry.py  _shell_ast.py  _updater_helpers.py  _zen_tooling.py  test_asar_integrity.py  test_broad_lib_schema_render_lane.py  test_cargo_nix_normalizer.py  test_cargo_nix_normalizer_wrappers.py  test_check_python_compile.py  test_ci_build_shared_closure.py  test_ci_build_shared_closure_more.py  test_ci_crate2nix.py  test_ci_dedup_cargo_lock.py  test_ci_dedup_cargo_lock_more.py  test_ci_flake_lock_diff.py  test_ci_flake_lock_diff_more.py  test_ci_main_guards.py  test_ci_merge_probe.py  test_ci_merge_sources.py  test_ci_merge_sources_more.py  test_ci_pr_body.py  (+187 more)
libnix/: __init__.py
misc/: dedup_cargo_lock.py  update-certification-pr-sample.md  yabai-center
modules/: _profiles-work-skeleton.nix  common.nix  default.nix
nix/: common.nix  configuration.nix  esbonio.nix  george.nix  home.nix  homebrew.nix  jcagent.nix  macos-defaults.nix  mksystem.nix  overlays.nix  packages.nix  pants.nix  programs.nix  system-packages.nix
nixos/: _base.nix  mesa.nix  nixos.nix  port-said.nix
os/: nixos.nix
overlay/: default.nix
overlays/: binary-darwin-apps.nix  codex.nix  default.nix  element-desktop.nix  flake-edit.nix  local-build-fixes.nix  local-overrides.nix  mdformat.nix  neovimLuaCompat.nix  nix-index.nix  pnpm.nix  swift.nix  vim-plugin-overrides.nix
patches/: cargo-nextest-no-dtrace-macos.patch
scripts/: update-vscode-insiders.py  update_vscode_insiders.py
tools/: __init__.py  build_shared_closure.py  flake_lock_diff.py  merge_sources.py  sources_json_diff.py
update/: __init__.py  __main__.py  cli.py  config.py  constants.py  errors.py  events.py  flake.py  net.py  nix.py  paths.py  process.py  refs.py  ui.py
updaters/: __init__.py  base.py  sources.py
zsh/: .zshenv  .zshrc
(+458 files in other folders)
